src/objects/dwp_kitv__Visit_Contact__c.object
<CustomObject>
    <description>Object to relate a contact with a visit. These records will appear on related list of Visit object.</description>
    <fields>
        <fullName>Decisor_Ejecutor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si el contacto relacionado es decisor o ejecutor.</description>
        <label>Decisor/Ejecutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_BPP_KitV_Title__c</fullName>
        <description>Se utiliza para mostrar en titulo en formato compacto.</description>
        <formula>dwp_kitv__contact_id__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_EUSV_NoEnviarEncuestasUnsuscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Este campo se utiliza para determinar que a este contacto no se le deben enviar encuestas, si está activo en la funcionalidad que lo mande a llamar deberá bloquear el envío de correos de encuestas.</description>
        <inlineHelpText>Activar esta casilla si se desea que no se le envíe ningún tipo de encuestas a este contacto.</inlineHelpText>
        <label>No Enviar Encuestas (Unsuscribed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EUSV_SurveySent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que permite determinar si la survey se ha enviado.</description>
        <label>Encuesta Enviada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_Correo_contacto__c</fullName>
        <description>Se copia correo del contacto relacionado para envío de encuesta.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Correo de contacto</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SuveySent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que permite determinar si la survey se ha enviado.</description>
        <label>SuveySent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__Main_contact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field to identify the main contact of the visit</description>
        <inlineHelpText>Selecciona para marcar como contacto principal</inlineHelpText>
        <label>Main contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__Send_minutes__c</fullName>
        <description>Field to know if the minutes were sent and how</description>
        <inlineHelpText>Selecciona para enviar minuta</inlineHelpText>
        <label>Send minutes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do not send</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                    <default>true</default>
                    <label>To</label>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>CCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_called_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determinate if this contact has been arranged.</description>
        <label>Arranged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_email_desc__c</fullName>
        <description>Retrieve the contact&apos;s email</description>
        <formula>dwp_kitv__contact_id__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation with a contact record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit Contacts</relationshipLabel>
        <relationshipName>Visit_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_phone_desc__c</fullName>
        <description>Retrieves the contact&apos;s phone</description>
        <formula>dwp_kitv__contact_id__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_id__c</fullName>
        <description>Relation with a visit record.</description>
        <label>Visit</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Visit Contacts</relationshipLabel>
        <relationshipName>Visit_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Contact</label>
    <nameField>
        <displayFormat>VC-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MX_PF_obligaContactoUnico</fullName>
        <active>true</active>
        <description>Permite que solo haya un contacto seleccionado en las visitas de PFLEAN</description>
        <errorConditionFormula>IF(
    AND( ISNEW(),
         dwp_kitv__visit_id__r.dwp_kitv__visit_contact_persons_number__c &gt;= 1,
         OR(dwp_kitv__visit_id__r.RecordType.DeveloperName = &apos;Reporte_de_visita_PF_LEAN_MEDIANA&apos;,
            dwp_kitv__visit_id__r.RecordType.DeveloperName = &apos;Reporte_de_visita_PF_LEAN_Otro_Seg&apos;,
            dwp_kitv__visit_id__r.RecordType.DeveloperName = &apos;Reporte_de_visita_PF_LEAN&apos;
           )
       ),
    true,
    false
   )</errorConditionFormula>
        <errorMessage>La visita solo puede tener un contacto Asignado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__Change_contact</fullName>
        <active>true</active>
        <description>You cannot change the contact.</description>
        <errorConditionFormula>ISCHANGED(  dwp_kitv__contact_id__c )</errorConditionFormula>
        <errorMessage>It is not allowed to change the contact. Please, delete the visit contact.</errorMessage>
    </validationRules>
</CustomObject>